--- a/src/client/app/app.html
+++ b/src/client/app/app.html
@@ -1,6 +1,8 @@
 <md-toolbar class="md-hue-2" md-whiteframe="5">
   <div class="md-toolbar-tools">
     <h2>ONE NIGHT ULTIMATE WEREWOLF</h2>
+    <span flex></span>
+    <span>{{vm.players.length}} players</span>
   </div>
 </md-toolbar>
 <ui-view flex></ui-view>
