--- a/src/client/app/app.html
+++ b/src/client/app/app.html
@@ -5,4 +5,4 @@
     <span>{{vm.players.length}} players</span>
   </div>
 </md-toolbar>
-<ui-view flex></ui-view>
+<ui-view flex layout="column"></ui-view>
